# open95

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: keygen.rs  main.rs
