[package]
name = "open95"
version = "0.3.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
categories = ["command-line-utilities"]
keywords = ["cli", "tui", "command-line"]
readme = "README.md"
repository = "https://github.com/walker84837/open95"

[profile.dev]
debug = false

[profile.release]
strip = true
lto = true
overflow-checks = true
panic = "abort"

[dependencies]
fastrand = "2.3.0"
clap = { version = "4.5", features = ["derive"] } 
rayon = "1.10"
